--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
@@ -9,16 +9,102 @@
     <div id="div_Body" class="div_body">
         <div class="div_body_top">
             <div class="div_body_top_left">
-                <p class="p_body_top_left">二手</p>
+                <p class="p_body_top_left">手机数码</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left"></li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'null')">手机</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'null')">笔记本电脑</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'null')">平板电脑</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'null')">数码产品</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'null')">台式电脑</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'null')">台式配件</li>
+
+                </ul>
+                <p class="p_body_top_left" style="margin-top:10px;">生活百货</p>
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left" onclick="OpenCXLB(159, '/ESCX/ES_JDJJBG_ESJD', 'null')">家用家电</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(160, '/ESCX/ES_JDJJBG_ESJJ', 'null')">家具</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(161, '/ESCX/ES_JDJJBG_JJRY', 'null')">家居日用</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(162, '/ESCX/ES_JDJJBG_BGSB', 'null')">办公用品</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ES_MYFZMR_MYETYPWJ', 'null')">母婴用品</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ES_MYFZMR_MYETYPWJ', 'null')">儿童玩具</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(164, '/ESCX/ES_MYFZMR_FZXMXB', 'null')">服饰箱包</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(165, '/ESCX/ES_MYFZMR_MRBJ', 'null')">美容保健</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(170, '/ESCX/ES_QTES_ESSB', 'null')">二手设备</li>
+                </ul>
+                <p class="p_body_top_left">门票卡券</p>
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">消费卡券</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">演出门票</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">游园景点</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">体育赛事</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">电影票</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">其他卡券</li>
+                </ul>
+                <p class="p_body_top_left">文化娱乐</p>
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left" onclick="OpenCXLB(167, '/ESCX/ES_WHYL_WTHWYQ', 'null')">文体户外</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(166, '/ESCX/ES_WHYL_YSPSCP', 'null')">工艺收藏</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ES_WHYL_TSYXRJ', 'null')">书籍杂志</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ES_WHYL_TSYXRJ', 'null')">音像软件</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(169, '/ESCX/ES_WHYL_WYXNWP', 'null')">网游虚拟</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
-
+                <p class="p_body_top_right">手机</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=阿拉斯加')">阿拉斯加</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=比熊')">比熊</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=博美犬')">博美犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=贵宾')">贵宾</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=金毛')">金毛</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=哈士奇')">哈士奇</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=格力犬')">格力犬</li>
+                </ul>
+                <p class="p_body_top_right">宠物猫</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=波斯猫')">波斯猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=金吉拉')">金吉拉</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=加菲猫')">加菲猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=短毛猫')">短毛猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=蓝猫')">蓝猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=折耳猫')">折耳猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=雪鞋猫')">雪鞋猫</li>
+                </ul>
+                <p class="p_body_top_right">花鸟鱼虫</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=观赏鱼')">观赏鱼</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=玩赏鸟')">玩赏鸟</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=其他小宠')">其他小宠</li>
+                </ul>
+                <p class="p_body_top_right">宠物服务</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物医院')">宠物医院</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物寄养')">宠物寄养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物美容')">宠物美容</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物训练')">宠物训练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物托运')">宠物托运</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物配种')">宠物配种</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物摄影')">宠物摄影</li>
+                </ul>
+                <p class="p_body_top_right">宠物用品</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=狗粮')">狗粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=狗用品')">狗用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=猫粮')">猫粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=猫用品')">猫用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=鱼缸')">鱼缸</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=水族箱')">水族箱</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=其他用品')">其他用品</li>
+                </ul>
+                <p class="p_body_top_right">宠物公益</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=宠物赠送')">宠物赠送</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=宠物领养')">宠物领养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=寻宠启示')">寻宠启示</li>
+                </ul>
             </div>
         </div>
-        <div class="div_body_middle">
+        <div id="div_body_middle" class="div_body_middle">
 
         </div>
     </div>
