--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
@@ -15,92 +15,108 @@
                     <li class="li_body_top_left" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'null')">笔记本电脑</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'null')">平板电脑</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'null')">数码产品</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'null')">台式电脑</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'null')">台式配件</li>
-
+                    <li class="li_body_top_left" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'null')">台式电脑/配件</li>
                 </ul>
                 <p class="p_body_top_left" style="margin-top:10px;">生活百货</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left" onclick="OpenCXLB(159, '/ESCX/ES_JDJJBG_ESJD', 'null')">家用家电</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(160, '/ESCX/ES_JDJJBG_ESJJ', 'null')">家具</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(161, '/ESCX/ES_JDJJBG_JJRY', 'null')">家居日用</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(162, '/ESCX/ES_JDJJBG_BGSB', 'null')">办公用品</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ES_MYFZMR_MYETYPWJ', 'null')">母婴用品</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ES_MYFZMR_MYETYPWJ', 'null')">儿童玩具</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(164, '/ESCX/ES_MYFZMR_FZXMXB', 'null')">服饰箱包</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(165, '/ESCX/ES_MYFZMR_MRBJ', 'null')">美容保健</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(170, '/ESCX/ES_QTES_ESSB', 'null')">二手设备</li>
-                </ul>
-                <p class="p_body_top_left">门票卡券</p>
-                <ul class="ul_body_top_left">
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">消费卡券</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">演出门票</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">游园景点</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">体育赛事</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">电影票</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(38, '/ESCX/ES_PWKQ_MPKQ', 'null')">其他卡券</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'null')">家用家电</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'null')">家用家具</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'null')">家居日用</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'null')">办公用品</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'null')">母婴用品</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'null')">儿童玩具</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'null')">服饰箱包</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_MRBJ', 'null')">美容保健</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(170, '/ESCX/ESCX_QTES_ESSB', 'null')">二手设备</li>
                 </ul>
                 <p class="p_body_top_left">文化娱乐</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left" onclick="OpenCXLB(167, '/ESCX/ES_WHYL_WTHWYQ', 'null')">文体户外</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(166, '/ESCX/ES_WHYL_YSPSCP', 'null')">工艺收藏</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ES_WHYL_TSYXRJ', 'null')">书籍杂志</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ES_WHYL_TSYXRJ', 'null')">音像软件</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(169, '/ESCX/ES_WHYL_WYXNWP', 'null')">网游虚拟</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'null')">文体户外</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(166, '/ESCX/ESCX_WHYL_YSPSCP', 'null')">工艺收藏</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ESCX_WHYL_TSYXRJ', 'null')">书籍杂志</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(38,  '/ESCX/ESCX_PWKQ_MPKQ', 'null')">门票卡券</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(168, '/ESCX/ESCX_WHYL_TSYXRJ', 'null')">音像软件</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(169, '/ESCX/ESCX_WHYL_WYXNWP', 'null')">网游虚拟</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
                 <p class="p_body_top_right">手机</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=阿拉斯加')">阿拉斯加</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=比熊')">比熊</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=博美犬')">博美犬</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=贵宾')">贵宾</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=金毛')">金毛</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=哈士奇')">哈士奇</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(31, '/ESCX/ESCX_CWG', 'PP=格力犬')">格力犬</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=102')">苹果</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=103')">三星</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=104')">小米</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=105')">华为</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=106')">魅族</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=107')">OPPO</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(154, '/ESCX/ESCX_SJSM_ESSJ', 'PP=110')">索尼</li>
                 </ul>
-                <p class="p_body_top_right">宠物猫</p>
+                <p class="p_body_top_right">笔记本电脑</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=波斯猫')">波斯猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=金吉拉')">金吉拉</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=加菲猫')">加菲猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=短毛猫')">短毛猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=蓝猫')">蓝猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=折耳猫')">折耳猫</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(32, '/ESCX/ESCX_CWM', 'PZ=雪鞋猫')">雪鞋猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=507')">联想</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=508')">戴尔</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=509')">华硕</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=510')">惠普</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=511')">索尼</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=512')">苹果</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(155, '/ESCX/ESCX_SJSM_BJBDN', 'LB=944&PP=513')">三星</li>
                 </ul>
-                <p class="p_body_top_right">花鸟鱼虫</p>
+                <p class="p_body_top_right">平板电脑</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=观赏鱼')">观赏鱼</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=玩赏鸟')">玩赏鸟</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/ESCX/ESCX_HNYC', 'PZ=其他小宠')">其他小宠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=749')">iPad</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=750')">三星</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=751')">联想</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=755')">华为</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=756')">宏基</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=757')">华硕</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(156, '/ESCX/ESCX_SJSM_PBDN', 'PP=758')">戴尔</li>
+                 </ul>
+                <p class="p_body_top_right">数码产品</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=841')">相机/配件</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=842')">数码摄像机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=843')">MP3/MP4</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=844')">游戏机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=845')">电子书/kindle</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=846')">耳机耳麦</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(157, '/ESCX/ESCX_SJSM_SMCP', 'LB=847')">智能设备</li>
                 </ul>
-                <p class="p_body_top_right">宠物服务</p>
+                <p class="p_body_top_right">台式电脑/配件</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物医院')">宠物医院</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物寄养')">宠物寄养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物美容')">宠物美容</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物训练')">宠物训练</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物托运')">宠物托运</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物配种')">宠物配种</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(34, '/ESCX/ESCX_CWFW', 'LB=宠物摄影')">宠物摄影</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=889')">台式机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=890')">服务器</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=891')">硬件</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=892')">外设产品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=893')">网络设备</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=894')">上网套餐</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(158, '/ESCX/ESCX_SJSM_TSJ', 'LB=895')">其他</li>
                 </ul>
-                <p class="p_body_top_right">宠物用品</p>
+                <p class="p_body_top_right">家用家电</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=狗粮')">狗粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=狗用品')">狗用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=猫粮')">猫粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=猫用品')">猫用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=鱼缸')">鱼缸</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=水族箱')">水族箱</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(35, '/ESCX/ESCX_CWYPSP', 'LB=其他用品')">其他用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=1')">电视机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=2')">洗衣机</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=3')">空调</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=4')">冰箱</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=7')">生活家电</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=6')">影音家电</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(159, '/ESCX/ESCX_JDJJBG_ESJD', 'LB=8')">厨卫家电</li>
                 </ul>
-                <p class="p_body_top_right">宠物公益</p>
+                <p class="p_body_top_right">家用家具</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=宠物赠送')">宠物赠送</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=宠物领养')">宠物领养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(36, '/ESCX/ESCX_CWGY', 'LB=寻宠启示')">寻宠启示</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=176')">床</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=177')">床垫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=178')">柜子</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=179')">架子</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=180')">桌子</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=181')">椅子/凳</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'LB=184')">办公家具</li>
+                </ul>
+                <p class="p_body_top_right">家居日用</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=258')">床上用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=259')">布艺饰品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=260')">生活日用</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=261')">灯具照明</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=262')">其它家居用品</li>
                 </ul>
             </div>
         </div>
