--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
@@ -23,8 +23,7 @@
                     <li class="li_body_top_left" onclick="OpenCXLB(160, '/ESCX/ESCX_JDJJBG_ESJJ', 'null')">家用家具</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'null')">家居日用</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'null')">办公用品</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'null')">母婴用品</li>
-                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'null')">儿童玩具</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'null')">母婴儿童</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'null')">服饰箱包</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_MRBJ', 'null')">美容保健</li>
                     <li class="li_body_top_left" onclick="OpenCXLB(170, '/ESCX/ESCX_QTES_ESSB', 'null')">二手设备</li>
@@ -117,6 +116,70 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=260')">生活日用</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=261')">灯具照明</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(161, '/ESCX/ESCX_JDJJBG_JJRY', 'LB=262')">其它家居用品</li>
+                </ul>
+                <p class="p_body_top_right">办公用品</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'LB=295')">办公设备</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'LB=296')">办公耗材</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'LB=297')">办公文仪</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'LB=298')">办公家具</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(162, '/ESCX/ESCX_JDJJBG_BGSB', 'LB=300')">其他办公用品</li>
+                </ul>
+                <p class="p_body_top_right">母婴儿童</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=1')">奶粉/营养辅食</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=2')">喂养用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=3')">护理用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=4')">婴幼服饰</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=5')">婴幼用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=6')">童床童车</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(163, '/ESCX/ESCX_MYFZMR_MYETYPWJ', 'LB=7')">玩具</li>
+                </ul>
+                <p class="p_body_top_right">服饰箱包</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=78')">服装</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=79')">鞋</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=80')">箱包</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=81')">配饰</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=82')">首饰</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=83')">手表</li>
+                </ul>
+                <p class="p_body_top_right">文体户外</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=53')">户外用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=54')">健身器材</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=56')">文教用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=57')">乐器</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=58')">球类用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=59')">瑜伽用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(167, '/ESCX/ESCX_WHYL_WTHWYQ', 'LB=61')">钓鱼用具</li>
+                </ul>
+                <p class="p_body_top_right">工艺收藏</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=1')">古董古玩</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=2')">书法绘画</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=3')">把玩物件</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=4')">钱币/票证</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=5')">珠宝玉器</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=6')">手工制品/工艺品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(164, '/ESCX/ESCX_WHYL_YSPSCP', 'LB=7')">邮票邮品</li>
+                 </ul>
+                <p class="p_body_top_right">门票卡券</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=104')">体育赛事</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=105')">演出门票</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=106')">游乐园</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=106')">景点票</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=107')">消费卡</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=107')">购物券</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(38, '/ESCX/ESCX_PWKQ_MPKQ', 'LB=108')">其他卡券</li>
+                </ul>
+                <p class="p_body_top_right">图书音像</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=144')">图书</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=1441')">教材</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=145')">音像</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=146')">软件</li>
                 </ul>
             </div>
         </div>
