--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
@@ -176,10 +176,9 @@
                 </ul>
                 <p class="p_body_top_right">图书音像</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=144')">图书</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=1441')">教材</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=145')">音像</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(165, '/ESCX/ESCX_MYFZMR_FZXMXB', 'LB=146')">软件</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(168, '/ESCX/ESCX_WHYL_TSYXRJ', 'LB=144')">图书</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(168, '/ESCX/ESCX_WHYL_TSYXRJ', 'LB=145')">音像</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(168, '/ESCX/ESCX_WHYL_TSYXRJ', 'LB=146')">软件</li>
                 </ul>
             </div>
         </div>
