--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -9,21 +9,84 @@
     <div id="div_Body" class="div_body">
         <div class="div_body_top">
             <div class="div_body_top_left">
-                <p class="p_body_top_left">招聘</p>
+                <p class="p_body_top_left">行业类别</p>
                 <ul class="ul_body_top_left">
-                    <li class="li_body_top_left"></li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP','ZWFL=29')">销售/客服/市场/公关</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=36')">人事/行政/后勤/司机</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=27')">生产/制造/机械/质控</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=28')">法律/教育/翻译/出版</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=26')">餐饮/百货/生活/服务</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">医疗/医药/保险</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">金融/银行/财务/管理</li> 
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=33')">能源/化工/环保/汽车</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">贸易/采购/物流/仓储</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">广告/设计/娱乐/传媒</li> 
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">房产/建筑/装修/物业</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">网络/通讯/电子/软件</li>
+                    <li class="li_body_top_left" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">农林牧渔/其他</li>
                 </ul>
             </div>
             <div class="div_body_top_right">
-
+                <p class="p_body_top_right">福利专区</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=26')">销售</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=29')">年底双薪</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=36')">带薪年假</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=30')">周末双休</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=89')">员工体检</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=27')">包吃</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=28')">包住</li>
+                </ul>
+                <p class="p_body_top_right">热招行业</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=波斯猫')">销售</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=金吉拉')">客服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=加菲猫')">市场</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=短毛猫')">公关</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=103')">人事</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=折耳猫')">行政</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=雪鞋猫')">后勤</li>
+                </ul>
+                <p class="p_body_top_right">兼职招聘</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=观赏鱼')">观赏鱼</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=玩赏鸟')">玩赏鸟</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=其他小宠')">其他小宠</li>
+                </ul>
+                <p class="p_body_top_right">宠物服务</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物医院')">宠物医院</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物寄养')">宠物寄养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物美容')">宠物美容</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物训练')">宠物训练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物托运')">宠物托运</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物配种')">宠物配种</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物摄影')">宠物摄影</li>
+                </ul>
+                <p class="p_body_top_right">宠物用品</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=狗粮')">狗粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=狗用品')">狗用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=猫粮')">猫粮</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=猫用品')">猫用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=鱼缸')">鱼缸</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=水族箱')">水族箱</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=其他用品')">其他用品</li>
+                </ul>
+                <p class="p_body_top_right">宠物公益</p>
+                <ul class="ul_body_top_right">
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物赠送')">宠物赠送</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物领养')">宠物领养</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=寻宠启示')">寻宠启示</li>
+                </ul>
             </div>
         </div>
-        <div class="div_body_middle">
+        <div id="div_body_middle" class="div_body_middle">
 
         </div>
     </div>
     <div class="div_bottom">
-        <p class="p_div_bottom">©2017 福建天问信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
-        <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备31010402000116号</p>
+        <p class="p_div_bottom">©2017 福建天问信息技术有限公司 客服电话：400-036-8989 | 021-6430110（周一至周日，9:00-18:00）</p>
+        <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备89010402000116号</p>
     </div>
 }
