--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZPSY.cshtml
@@ -37,47 +37,37 @@
                     <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=27')">包吃</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'ZWFL=28')">包住</li>
                 </ul>
-                <p class="p_body_top_right">热招行业</p>
-                <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=波斯猫')">销售</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=金吉拉')">客服</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=加菲猫')">市场</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=短毛猫')">公关</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=103')">人事</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=折耳猫')">行政</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=雪鞋猫')">后勤</li>
+                <p class="p_body_top_right">热招职位</p>
+                <ul id="ul_body_top_right_rzzw" class="ul_body_top_right">
+                    @*<li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZP CX_QZZP', 'ZWLB=57&ZW=61')">销售代表</li>*@
                 </ul>
                 <p class="p_body_top_right">兼职招聘</p>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=观赏鱼')">观赏鱼</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=玩赏鸟')">玩赏鸟</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'PZ=其他小宠')">其他小宠</li>
-                </ul>
-                <p class="p_body_top_right">宠物服务</p>
-                <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物医院')">宠物医院</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物寄养')">宠物寄养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物美容')">宠物美容</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物训练')">宠物训练</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物托运')">宠物托运</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物配种')">宠物配种</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物摄影')">宠物摄影</li>
-                </ul>
-                <p class="p_body_top_right">宠物用品</p>
-                <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=狗粮')">狗粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=狗用品')">狗用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=猫粮')">猫粮</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=猫用品')">猫用品</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=鱼缸')">鱼缸</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=水族箱')">水族箱</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=其他用品')">其他用品</li>
-                </ul>
-                <p class="p_body_top_right">宠物公益</p>
-                <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物赠送')">宠物赠送</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=宠物领养')">宠物领养</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(89, '/ZPCX/ZPCX_QZZP', 'LB=寻宠启示')">寻宠启示</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=653')">网络营销</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=654')">生活配送</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=655')">传单派发</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=656')">问卷调查</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=657')">游戏代练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=658')">钟点工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=659')">家教</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=660')">美工设计</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=661')">导游</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=662')">促销导购</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=663')">平面模特</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=664')">网店模特</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=665')">艺术老师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=666')">化妆师</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=667')">SEO优化</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=668')">护工</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=669')">演出表演</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=670')">测试兼职</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=671')">网站开发</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=672')">网络布线</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=673')">汽车陪练</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=674')">汽车代驾</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=675')">保洁清洗</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=676')">公司注册</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(90, '/ZPCX/ZPCX_JZZP', 'JZLB=677')">兼职会计</li>
                 </ul>
             </div>
         </div>
